[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
memoize = "0.3.1"
ndarray = "0.15.6"
nom = "7.1.1"
regex = "1.6.0"
